@@ -63,9 +63,12 @@ if ( ! ${?GNUSTEP_BUILD_ROOT} ) then
 if ( ! ${?GNUSTEP_PATHPREFIX_LIST} ) then
   setenv GNUSTEP_PATHPREFIX_LIST ${GNUSTEP_USER_ROOT}:${GNUSTEP_LOCAL_ROOT}:${GNUSTEP_SYSTEM_ROOT}
 endif
-foreach dir $GNUSTEP_PATHPREFIX_LIST
-  setenv PATH $PATH:$dir/Tools
+set tp = ""
+foreach dir ( `/bin/sh -c 'IFS=:; for i in ${GNUSTEP_PATHPREFIX_LIST};
+do echo $i; done'` )
+  set tp=${tp}${dir}/Tools:
 end
+setenv PATH ${tp}${PATH}
 
 source ${GNUSTEP_SYSTEM_ROOT}/Makefiles/ld_lib_path.csh
 
